tests/paczka2/big_fuzzy/68159963.err
Error in line 7: Q5qoQHiDVg2 S215 83,0
Error in line 12: cChrqk A621 30,2
Error in line 15: cChrqk S215 57,0
Error in line 14: jDV S215 60,5
Error in line 19: 5bz7 A621 38,5
Error in line 23: cChrqk A156 -2,5
Error in line 29: jDV A156 80,0
Error in line 31: jDV S215 92,9
Error in line 25: 5f8 A621 50,8
Error in line 20: cChrqk A156 77,0
Error in line 51: cChrq¯ S215 61,8
Error in line 53: A812 A812 -1,1
Error in line 48: cChrqk S215 33,4
Error in line 58: Q5qoQHiDVg2 S215 74,5
Error in line 60: jDV A812 34,8
Error in line 68: cChrqk S215 24,5
Error in line 82: cChrqk A621 80,9
Error in line 97: 5bz7 S215 32,5
Error in line 112: A812 A812 94,08
Error in line 115: cChrqk S215 28,7
Error in line 118: 5bz7 S215 2,8
Error in line 108: A812 A812 58,5
Error in line 119: jDV A156 75,9
Error in line 127: Q5qoQHiDVg2 A812 49,2
Error in line 143: jDV S215 28,5
Error in line 142: cChrqk A812 294,9
Error in line 154: jDV A156 26,9
Error in line 152: cChrqk A812 42,8
Error in line 162: A812 A156 13,2
Error in line 155: jDV A621 69,7
Error in line 175: 5bz7 A812 324,66
Error in line 173: 3syFK96 S215 15,7
Error in line 178: 3syFK96 A812 95,3
Error in line 194: Q5qoQHiDVg2 S215 53,37
Error in line 202: 5f8 A156 60,5
Error in line 208: 5f8 A812 74,9
Error in line 204: Q5qoQHiDVg2 A812 75,0
Error in line 209: 5f8 A156 48,5
Error in line 218: cChrqk A156 30,06
Error in line 210: A812 S215 24,6
Error in line 225: A812 A812 168,0
Error in line 226: jDV A156 194,0
Error in line 232: 5bz7 A812 30,3
Error in line 246: A812 S215 -6,9
